# SIDM_order_xingyu

./: CMakeLists.txt  GadCrater3  Makefile  Makefile~  README.md  StelPert.param  StelPert.param-usedvalues  allocate.c  allvars.c  allvars.h  begrun.c  check.C  doscatt.c  doscatt.c~  forcetree.c  gettot.sh  init.c  ngb_sidm.c  predict.c  proto.h  run.c  run1.param-usedvalues  run1.sh  run2.param  run2.param-usedvalues  run2.sh  run2_inc_acc2.param  run2_inc_acc2.param-usedvalues  run2_inc_acc2.sh  run3.param  run3.param-usedvalues  run3.sh  run4.param  run4.param-usedvalues  run4.sh  sidm.c  sidm.param  sidm.param-usedvalues  submit.sh  tags.h  (+1 more)
input/: StePer-m3.2e8-c28.4-low.out
